--- a/web/src/components/post.module.scss
+++ b/web/src/components/post.module.scss
@@ -84,18 +84,21 @@
 
   // Just copying the values from layout-size-large because I cannot use the mixin
   padding: var(--font-base-line-height);
+  margin-top: 0;
+  margin-bottom: 0;
 
   @media($media-min-medium) {
     padding-left: calc(var(--font-base-line-height) * 2);
     padding-right: calc(var(--font-base-line-height) * 2);
     padding-top: calc(var(--font-base-line-height) * 3);
-    margin-bottom: calc(var(--font-base-line-height) * -3);
+    margin-bottom: calc(var(--font-base-line-height) * -2);
   }
 
   & p {
     max-width: 37.5rem;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0;
   }
 }
 
