--- a/web/src/styles/global.scss
+++ b/web/src/styles/global.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'IBM Plex Mono';
-  src: local('IBM Plex Mono'),
-    url('../static/fonts/IBMPlexMono_regular.woff2') format('woff2');
+  src: url('../static/fonts/IBMPlexMono_regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -9,8 +8,7 @@
 
 @font-face {
   font-family: 'IBM Plex Mono';
-  src: local('IBM Plex Mono'),
-    url('../static/fonts/IBMPlexMono_bold.woff2') format('woff2');
+  src: url('../static/fonts/IBMPlexMono_bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -18,8 +16,7 @@
 
 @font-face {
   font-family: 'Calendas Plus';
-  src: local('Calendas Plus'),
-    url('../static/fonts/CalendasPlus_regular.woff2') format('woff2');
+  src: url('../static/fonts/CalendasPlus_regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -27,8 +24,7 @@
 
 @font-face {
   font-family: 'Calendas Plus';
-  src: local('Calendas Plus'),
-    url('../static/fonts/CalendasPlus_bold.woff2') format('woff2');
+  src: url('../static/fonts/CalendasPlus_bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -36,8 +32,7 @@
 
 @font-face {
   font-family: 'Calendas Plus';
-  src: local('Calendas Plus'),
-    url('../static/fonts/CalendasPlus_italic.woff2') format('woff2');
+  src: url('../static/fonts/CalendasPlus_italic.woff2') format('woff2');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -258,6 +253,11 @@ figcaption {
 
   & p {
     margin: 0;
+  }
+
+  strong {
+    font-weight: normal;
+    color: var(--color-accent);
   }
 
   @media($media-min-medium) {
